Add logging to the main function

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ git:
 before_script:
   - go get github.com/golangci/golangci-lint/cmd/golangci-lint
   - go get github.com/stretchr/testify/assert
+  - go get github.com/bndr/gotabulate
 
 # script always runs to completion (set +e). If we have linter issues AND a
 # failing test, we want to see both. Configure golangci-lint with a
