--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ before_script:
 # .golangci.yml file at the top level of your repo.
 script:
   - golangci-lint run       # run a bunch of code checkers/linters in parallel
-  - cd test && go test -v -race  # Run all the tests with the race detector enabled
+  - make tests  # Run all the tests with the race detector enabled
