--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_script:
   - go get github.com/golangci/golangci-lint/cmd/golangci-lint
   - go get github.com/stretchr/testify/assert
   - go get github.com/bndr/gotabulate
+  - go get github.com/gorilla/handlers
 
 # script always runs to completion (set +e). If we have linter issues AND a
 # failing test, we want to see both. Configure golangci-lint with a
